# gdc-tosvc-tools

./: .cruft.json  .gitlab-ci.yml  .secrets.baseline  Dockerfile  LICENSE  Makefile  README.md  annot_fail_purecn_vcf.py  build_push.sh  build_push_dockerhub.sh  custom_purecn_vcf_merging.py  extract_wig_size.py  filter_mutect_outputs.py  filter_purecn_outputs.py  filter_vardict_outputs.py  filter_vardict_paired_outputs.py  filter_vardict_purecn_outputs.py  format_vcf_header.py  gdc_docker_build.sh  modify_purecn_outputs.py  pyproject.toml  requirements.txt  tag_push_quay.sh  test_filter_fail_purecn_vcf.sh  test_filter_mutect_outputs.sh  test_filter_purecn_outputs.sh  test_filter_vardict_paired_outputs.sh  tox.ini
gdc_tosvc_tools/: __init__.py  __main__.py  annot_fail_purecn_vcf.py  extract_wig_size.py  filter_mutect_outputs.py  filter_purecn_outputs.py  filter_vardict_outputs.py  filter_vardict_purecn_outputs.py  format_vcf_header.py  modify_purecn_outputs.py  utils.py
gdc_tosvc_tools/cli/: annot_fail_purecn_vcf.py  extract_wig_size.py  filter_mutect_outputs.py  filter_purecn_outputs.py  filter_vardict_outputs.py  filter_vardict_purecn_outputs.py  format_vcf_header.py  modify_purecn_outputs.py
tests/unit/: test_extract_wig_size.py  test_main.py
