[build-system]
requires = ["flit_scm"]
build-backend = "flit_scm:buildapi"

[project]
name = "gdc-tosvc-tools"
description = "Tools for GDC Tumor-only Somatic Variant Calling Workflow"
authors = [
    {name = "Charles Czysz", email = "czysz@uchicago.edu"}
]

readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: Apache Software License",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only"
]
dynamic = ["version"]
dependencies = [
    "click",
    "pysam",
]

[project.optional-dependencies]
dev = [
    "black",
    "detect-secrets==1.2.0",
    "flake8-docstrings",
    "flake8",
    "isort",
    "mypy",
    "pre-commit>=2.9.0",
]

test = [
    "coverage[toml]",
    "pytest",
]

[project.urls]
homepage = "https://github.com/NCI-GDC/gdc-tosvc-tools"

[project.scripts]
"gdc_tosvc_tools" = "gdc_tosvc_tools.__main__:main"

[tool.setuptools_scm]
write_to = "gdc_tosvc_tools/_version.py"
local_scheme = "dirty-tag"
version_scheme = "python-simplified-semver"
fallback_version = "0"

[tool.coverage.run]
source = ["gdc_tosvc_tools"]
branch = true
parallel = true

[tool.flit.module]
name = "gdc_tosvc_tools"

[tool.flit.sdist]
include = ["gdc_tosvc_tools/_version.py"]
exclude = [
        ".*",
        "dev-requirements.*",
        "Dockerfile",
        "Jenkinsfile",
        "*travis.yml",
        "tox.ini",
]

[tool.black]
line-length = 88
skip-string-normalization = true
target-version = ['py38']

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses=true
line_length = 88

[tool.mypy]
python_version = 3.8
disallow_untyped_defs = true
warn_return_any = true
warn_unused_configs = true

[tool.coverage.report]
show_missing = true
